# joss-repo-miner

./: README.md  pyproject.toml  requirements.txt
results/: joss_all.csv  joss_all.part.csv  joss_published.csv
src/joss_repo_miner/: __main__.py  cli.py  config.py
src/joss_repo_miner/scrapers/: __init__.py  accepted.py  published.py
src/joss_repo_miner/utils/: http.py  io.py  parsing.py
tests/integration/: test_http_to_csv.py
tests/unit/utils/: test_http.py  test_io.py
